# jira-django-react

./: compose.yaml
backend/: .gitignore  models_diagram.puml  pyproject.toml
backend/api/: admin.py  custom_permissions.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/jira_api/: settings.py  urls.py
docker/backend/: Dockerfile
docker/backend/.devcontainer/: devcontainer.json
docker/db/: postgresql.conf
docker/frontend/: Dockerfile
docker/frontend/.devcontainer/: devcontainer.json
frontend/: .eslintignore  .eslintrc.json  .prettierignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/common/: constants.ts  thema.ts
frontend/src/components/auth/: Auth.tsx
frontend/src/components/task/: TaskDisplay.tsx  TaskForm.tsx  TaskList.tsx  types.ts
frontend/src/pages/: Login.tsx  Task.tsx
frontend/src/redux/: store.ts
frontend/src/redux/auth/: authSlice.ts  operations.ts  selectors.ts  types.ts
frontend/src/redux/task/: operations.ts  selectors.ts  taskSlice.ts  types.ts
frontend/src/stories/: Header.tsx
